--- a/website/static/website/styles/home.css
+++ b/website/static/website/styles/home.css
@@ -108,3 +108,10 @@
   text-shadow: 1px 1px #d2d2d240;
   font-weight: bold;
 }
+
+.dark-theme .container h2 {
+  background: #2f2f2f;
+  border-bottom-color: #242424;
+  color: white;
+  text-shadow: 1px 1px #3c3c3c;
+}
