Add Elemy to welfare information

--- a/website/templates/website/welfare.html
+++ b/website/templates/website/welfare.html
@@ -35,7 +35,7 @@
     </div>
   </section>
   <section id="people">
-    <h2>People to talk to</h2>
+    <h2>Useful Resources</h2>
     <ul>
       <li>
         <b>Tutors</b> – Your PAT is there to support you and answer any questions about university you may have.
@@ -63,6 +63,9 @@
       </li>
       <li>
         <b>Steps to Wellbeing</b> – You can refer yourself Steps to Wellbeing on <a href="https://www.steps2wellbeing.co.uk/self_referral">their website</a>, which offer psychological therapies through the NHS (no need to wait for your GP). They also have a lot of great resources on the same website.
+      </li>
+      <li>
+        <b>Elemy</b> - A great website for practical mental health information. They have great resources, including some on <a href="https://www.elemy.com/studio/mood-disorders/depression">depression</a> and the relationship between <a href="https://www.elemy.com/studio/mood-disorders/autism-and-suicidal-thoughts">autism and suicidal thoughts</a>.
       </li>
     </ul>
     Remember, you can always see your GP if you are worried about your mental health.
