--- a/website/static/website/styles/home.css
+++ b/website/static/website/styles/home.css
@@ -34,6 +34,8 @@
   width: 10rem;
   height: 3rem;
   margin: 3rem;
+  margin-bottom: 5rem;
+  margin-top: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -52,6 +54,8 @@
     width: 9rem;
     height: 3rem;
     margin: 1rem;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
   }
 }
 
@@ -60,6 +64,8 @@
     width: 8.1rem;
     height: 2.7rem;
     margin: 1rem;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
   }
 }
 
