Fix order success message typo

--- a/shop/templates/shop/order.html
+++ b/shop/templates/shop/order.html
@@ -17,7 +17,7 @@
   {% if from_stripe != False %}
   <div class="alert alert-success" role="alert">
     <b>Order purchased!</b>
-    <br>Thank you from purchasing from the ECS Society's merch store.
+    <br>Thank you for purchasing from the ECS Society's merch store.
   </div>
   {% endif %}
   <div class="card">
