Fix incorrect SUCSS & ECSSB urls for merch store

--- a/shop/templates/shop/merch2023/merch2023.html
+++ b/shop/templates/shop/merch2023/merch2023.html
@@ -41,7 +41,7 @@
   <section class="container">
     <h2 class="text-center">Other ECS Societies Merch</h2>
     <div class="row">
-      <a class="col border border-ecssweb m-1" href="{% url 'shop:shop-sale' 'ecssb-merch-2023' %}" style="text-align: center">
+      <a class="col border border-ecssweb m-1" href="{% url 'shop:shop-sale' 'ecssb-2023' %}" style="text-align: center">
         <img class="img-fluid" src="{% static 'shop/images/ecssb-logo.png' %}" width="150">
         <div class="text-center">ECSSB</div>
       </a>
@@ -49,7 +49,7 @@
         <img class="img-fluid" src="{% static 'shop/images/dagsoc-logo.png' %}" width="150">
         <div class="text-center">DAGSoc</div>
       </a>
-      <a class="col border border-ecssweb m-1" href="{% url 'shop:shop-sale' 'sucss-merch-2023' %}" style="text-align: center">
+      <a class="col border border-ecssweb m-1" href="{% url 'shop:shop-sale' 'sucss-2023' %}" style="text-align: center">
         <img class="img-fluid" src="{% static 'shop/images/sucss-logo.png' %}" width="150">
         <div class="text-center">SUCSS</div>
       </a>
