Add merch store to nav bar

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -57,6 +57,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'website:welfare' %}">Welfare</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'shop:merch2023' %}" style="background: #fffb00;
+                border-radius: .2rem;
+                color: black;
+                font-weight: bold;">Merch Store</a>
+              </li>
             </ul>
             <ul class="navbar-nav">
               <span style="margin-right: 20px;" ><input id="toggle-dark" type="checkbox" checked data-style="dark" data-toggle="toggle" data-on="<i class='fa fa-moon'></i>" data-off="<i class='fa fa-sun'></i>"></span>
