Correct merch 2023 chest measurements

--- a/shop/templates/shop/merch2023/merch2023.html
+++ b/shop/templates/shop/merch2023/merch2023.html
@@ -112,7 +112,7 @@
       </p>
     </div>
     <div>
-      T-shirt
+      <b>T-shirt</b>
       <table class="table table-bordered table-sm ">
         <thead>
           <tr>
@@ -150,7 +150,7 @@
       </table>
     </div>
     <div>
-      Hoodie
+      <b>Hoodie</b>
       <table class="table table-bordered table-sm ">
         <thead>
           <tr>
@@ -171,23 +171,23 @@
         <tbody>
           <tr>
             <td>
-              38'
+              34/36'
             </td>
             <td>
-              40'
+              38/40'
             </td>
             <td>
-              43'
+              42/44'
             </td>
             <td>
-              45'
+              46/48'
             </td>
           </tr>
         </tbody>
       </table>
     </div>
     <div>
-      Zippy Hoodie
+      <b>Zippy Hoodie</b>
       <table class="table table-bordered table-sm ">
         <thead>
           <tr>
@@ -208,23 +208,23 @@
         <tbody>
           <tr>
             <td>
-              38'
+              34/36'
             </td>
             <td>
-              40'
+              38/40'
             </td>
             <td>
-              42'
+              42/44'
             </td>
             <td>
-              44'
+              46/48'
             </td>
           </tr>
         </tbody>
       </table>
     </div>
     <div>
-      Quarter Zip
+      <b>Quarter Zip</b>
       <table class="table table-bordered table-sm ">
         <thead>
           <tr>
@@ -245,22 +245,22 @@
         <tbody>
           <tr>
             <td>
-              38'
+              37'
             </td>
             <td>
-              40/42'
+              41'
             </td>
             <td>
-              42/44'
+              44'
             </td>
             <td>
-              44/46'
+              48'
             </td>
           </tr>
         </tbody>
       </table>
     </div>
-    Jumper
+    <b>Jumper</b>
       <table class="table table-bordered table-sm ">
         <thead>
           <tr>
@@ -281,51 +281,51 @@
         <tbody>
           <tr>
             <td>
-              38'
-            </td>
-            <td>
-              40/42'
-            </td>
-            <td>
-              42/44'
-            </td>
-            <td>
-              44/46'
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      Varsity
-      <table class="table table-bordered table-sm ">
-        <thead>
-          <tr>
-            <th scope="col">
-              S
-            </th>
-            <th scope="col">
-              M
-            </th>
-            <th scope="col">
-              L
-            </th>
-            <th scope="col">
-              XL
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              38'
+              36'
             </td>
             <td>
               40'
             </td>
             <td>
-              42'
+              44'
+            </td>
+            <td>
+              48'
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <b>Varsity</b>
+      <table class="table table-bordered table-sm ">
+        <thead>
+          <tr>
+            <th scope="col">
+              S
+            </th>
+            <th scope="col">
+              M
+            </th>
+            <th scope="col">
+              L
+            </th>
+            <th scope="col">
+              XL
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              36'
+            </td>
+            <td>
+              40'
             </td>
             <td>
               44'
+            </td>
+            <td>
+              48'
             </td>
           </tr>
         </tbody>
