--- a/website/templates/website/sponsors/sponsor.html
+++ b/website/templates/website/sponsors/sponsor.html
@@ -37,7 +37,8 @@
   </ul>
   <div class="row mt-2">
     <div class="col-lg-3 my-2">
-      <img class="img-fluid mx-auto d-block ecssweb-sponsor-logo" src="{% static current_sponsor.logo_file %}" alt="{{ current_sponsor.name }}">
+      <img class="img-fluid mx-auto d-block ecssweb-sponsor-logo sponsor-logo-light" src="{{ current_sponsor.get_logo_url }}" alt="{{ current_sponsor.name }}">
+      <img class="img-fluid mx-auto d-block ecssweb-sponsor-logo sponsor-logo-dark" src="{{ current_sponsor.get_dark_logo_url }}" alt="{{ current_sponsor.name }}">
     </div>
     <div class="col-lg-9">
       <h2>{{ current_sponsor.name }}</h2>
