Fix page titles for orders

--- a/shop/templates/shop/order.html
+++ b/shop/templates/shop/order.html
@@ -4,7 +4,7 @@
 {% load website_extra %}
 {% load shop_extra %}
 
-{% block title %}My Basket - ECSS{% endblock %}
+{% block title %}Order #{{order.id}} - ECSS{% endblock %}
 
 {% block pagestyle %}
 {{ block.super }}
