--- a/election/templates/election/position.html
+++ b/election/templates/election/position.html
@@ -49,7 +49,7 @@
   <p>
     This election is for ECSS members.
   </p>
-  {% if not perms.ecsswebauth.is_ecs_user %}
+  {% if not can_vote %}
   <p>
     Unfortunately you are unable to nominate, support nominations or vote in this election. If you think it is an error please contact us.
   </p>
@@ -90,7 +90,7 @@
         </div>
         {% endfor %}
       </div>
-      {% if perms.ecsswebauth.is_ecs_user %}
+      {% if can_vote %}
       <div class="mt-3">
         {% if position|has_voted:user %}
         <p>You have already voted for {{ position.name }}.</p>
